_sass/_style.scss
@import "vars";

@font-face {
    font-family: 'noto';
    src: url('/assets/notoserif-bold-webfont.woff2') format('woff2'),
         url('/assets/notoserif-bold-webfont.woff') format('woff');
    font-weight: bold;
    font-style: normal;

}
@font-face {
    font-family: 'noto';
    src: url('/assets/notoserif-italic-webfont.woff2') format('woff2'),
         url('/assets/notoserif-italic-webfont.woff') format('woff');
    font-weight: normal;
    font-style: italic;

}
@font-face {
    font-family: 'noto';
    src: url('/assets/notoserif-regular-webfont.woff2') format('woff2'),
         url('/assets/notoserif-regular-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

/*
 * Basic
 */

html {
    height: 100%;
    margin: 0;
    padding: 0;
}
body {
    margin: 0;
    font-family: 'noto';
    height: 100%;
}
a {
    text-decoration: none;
    color: $accent;
}
a:hover {
    text-decoration: underline;
}
hr {
    border: 0;
    height: 0;
    border-top: 1px solid rgba(0, 0, 0, 0.1);
    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
}
h1 {
    font-size: 32px;
}
h1>code {
    font-size: 24px;
}
header>p {
    font-style: italic;
}
header>p::before{
    content:"TL;DR – ";
    font-weight: bold;
}

/*
 * Navbar
 */

#author-name {
    font-size: 20px;
    /*color: white;*/
    display: inline-block;
}
.navbar {
    padding: 20px;
    /*background-color: #2F638B;
    color: white;*/
    border-radius: 20px;
    margin-bottom: 20px;
}

.navbar-ul {
    display: inline-block;
    margin: 0;
    padding: 5px 0 5px 0;
    margin-left: 20px;
}
.nav-list {
    list-style-type: none;
    margin: 0 5px 0 10px;
}
.alignable {
    display: inline-block;
}
.pull-left {
    @extend .alignable;
    float: left;
}
.pull-right {
    @extend .alignable;
    float: right;
}

/* Divs */

.container {
    max-width: $max-width;
    margin: auto;
}
.wrapper {
    min-height: 100%;
}

.content {
    text-align: justify;
}

/* Institute Image */

#ins-logo {
	margin: auto;
	display: block;
	max-height: 100px;
	text-align: center;
}

/* Mobile */

@media (max-width: 800px) {
    .container {
        max-width: $med-width;
        transition: 0.3s ease all;
    }
}

@media (max-width: 650px) {
    .container {
        max-width: 83%;
    }
    .navbar-ul {
        margin-top: 5px;
    }
}

@media (max-width: 500px) {
	.navbar {
		text-align: center;
		padding: 50px 0px 0px 0px;
	}
	#author-name {
		width: 100%;
		float: none;
	}
	#navlist {
		padding: 10px 0 10px 0;
		margin: 0;
		display: block;
		float: none;
		text-align: center;
		width: 100%;
	}
	#navlist li.alignable {
		display: inline-block;
	}
	#navlist li.pull-left {
		float: none;
	}
	#navlist li.nav-list {
		margin: 0;
	}
}

.post_date {
    color: #BBBBBB;
    font-style: italic;
    text-align: right;
    width: 100%;
}

// Data tables
.table-wrapper {
    overflow-y: scroll;
    height: 300px;
    font-size: 70%;
}

.table-wrapper>table {
    table-layout: fixed;
    width: 650px;
}

.data-table {
    font-size: 70%;
}

.top {
    display: flex;
    justify-content: space-between;
}

.dataTables_wrapper {
    padding: 5px;
    border: 1px solid #bbb;
    border-radius: 5px;
}

.dataTables_wrapper>.table {
    margin-top: 5px;
    max-height: 500px;
    overflow-y: scroll;
}

.dataTables_wrapper>.table>table {
    margin-top: 0px;
    table-layout: fixed;
}

.dataTables_filter {
    text-align: right;
    width: 270px;
    margin-left: auto;
}

.dataTables_filter input {
    margin-left: 5px;
}

.data-table td {
    overflow: hidden;
    word-wrap: break-word;
}

.sorting_asc::after {
    content: " ▲";
}

.sorting_desc::after {
    content: " ▼";
}

// DLL Hijack table specific
.hijack-table td:nth-child(1) {
    text-align: center;
}
.hijack-table th:nth-child(1) {
    width: 50px;
}

.env-table th:nth-child(1){
    width: max-content
}

// Twitter
#tweet {
    width: 550px !important;
    margin: 0 auto;
    text-align: center;
}

#tweet iframe {
    border: none !important;
    box-shadow: none !important;
}

@import "typography";
@import "tables";
@import "code";

